--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "about-me-ui",
+  "homepage": "http://th3equin0x.github.io/about-me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
